[gd_scene load_steps=5 format=3 uid="uid://c2cbdyvdijlwb"]

[ext_resource type="Texture2D" uid="uid://dtcv7k0sqjsae" path="res://assets/grid.png" id="1_pi8lu"]
[ext_resource type="Script" path="res://background.gd" id="1_r17sm"]
[ext_resource type="Texture2D" uid="uid://3aoxm1xy2v6v" path="res://assets/grid3.png" id="2_e2gc7"]
[ext_resource type="Texture2D" uid="uid://bgrknypkor33b" path="res://assets/grid2.png" id="3_f200b"]

[node name="Background" type="Node2D"]
script = ExtResource("1_r17sm")

[node name="Grid3" type="TextureRect" parent="."]
modulate = Color(0.1, 0.04, 0.16, 1)
texture_filter = 1
offset_left = -10000.0
offset_top = -10000.0
offset_right = 10000.0
offset_bottom = 10000.0
scale = Vector2(4, 4)
texture = ExtResource("2_e2gc7")
stretch_mode = 1

[node name="Grid2" type="TextureRect" parent="."]
modulate = Color(0.1375, 0.055, 0.22, 1)
texture_filter = 1
offset_left = -30000.0
offset_top = -30000.0
offset_right = -10000.0
offset_bottom = -10000.0
scale = Vector2(4, 4)
texture = ExtResource("3_f200b")
stretch_mode = 1

[node name="Grid1" type="TextureRect" parent="."]
modulate = Color(0.2, 0.08, 0.32, 1)
texture_filter = 1
offset_left = -10000.0
offset_top = -10000.0
offset_right = 10000.0
offset_bottom = 10000.0
scale = Vector2(4, 4)
texture = ExtResource("1_pi8lu")
stretch_mode = 1
